# etphonehome-public

./: .gitattributes  .gitignore  .gitignore.public  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_TRANSFER_IMPROVEMENT_RESEARCH.md  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  SETUP_STATUS.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.project_settings/: hostinger_server_ip
.secrets/: README.md  etphonehome.key  hostinger_api_key
.secrets.example/: hostinger_api_key
client/: __init__.py  agent.py  capabilities.py  config.py  metrics.py  phonehome.py  requirements.txt  ssh_session_store.py  tunnel.py  updater.py
deploy/: README.md
docs/: API.md  R2_SETUP_GUIDE.md  README.md  SECRETS_MANAGEMENT.md  download-server-setup.md  hostinger-server-setup.md  management-guide.md  mcp-server-setup-guide.md  private-repo-setup.md  roadmap.md  ssh-claude-code-guide.md  style-guide.md  ui-mockups-client.html  ui-mockups.html  ui-mockups.md  webhooks-guide.md
scripts/: deploy_downloads.sh  deploy_mcp_service.sh  etphonehome-mcp.service  generate_keys.py  install-service.sh  phonehome-user.service  phonehome.service  register_handler.py  run_mcp.sh  server.env.example  setup_github_token.sh  setup_r2_secrets.sh  setup_server.sh
server/: __init__.py  client_connection.py  client_registry.py  client_store.py  health_monitor.py  http_server.py  mcp_server.py  rate_limiter.py  requirements.txt  webhooks.py
shared/: __init__.py  (+8 more)
(+77 files in other folders)
